; if you modify this file, add 'test' to the 'skip' field in drom.toml

(library
 (name lib_expect_tests)
 (preprocess
  (pps ppx_expect))
 (inline_tests
  (modes best)) ; add js for testing with nodejs
 (libraries ez-hash ocaml-solidity-common ocaml-solidity-parser ocaml-solidity-typechecker) ; add your project libraries here
 )
